# aws-cost-notifer-rs

./: .env.sample  Cargo.toml  LICENSE.txt  README.md
src/: config.rs  lib.rs  main.rs
src/analyzers/: cost_analyzer.rs  mod.rs
src/models/: cost_data.rs  cost_summary.rs  mod.rs
src/services/: aws.rs  slack.rs
src/utils/: billing_period.rs  mod.rs
