[package]
name = "aws-cost-notifer-rs"
version = "0.1.0"
edition = "2021"
authors = ["Yusuke Takedachi <yutak03.dev@gmail.com>"]
description = "A Rust application to fetch AWS cost data and send notifications to Slack"

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.5"
aws-sdk-costexplorer = "1.39.0"
chrono = "0.4.38"
chrono-tz = "0.9.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
